--- a/aboba.html
+++ b/aboba.html
@@ -1,17 +1,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>MHMM</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  
-  <body>
-   
-    <script src="huh.js"></script>
-  
-    
-  
-    </script>
-  </body>
+    <script src="huh.js" defer></script>
+    <body>
+        <div id="container">
+            <button id="1">Click Me</button>
+            <button id="2">Click Me</button>
+            <button id="3">Click Me</button>
+        </div>
+    </body>
   
   </html
