rpc with buttons

--- a/aboba.html
+++ b/aboba.html
@@ -1,14 +1,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>MHMM</title>
+    <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-    <script src="huh.js" defer></script>
-    <body>
-        <div id="container">
-            <button id="1">Click Me</button>
-            <button id="2">Click Me</button>
-            <button id="3">Click Me</button>
-        </div>
-    </body>
+
+  <body>
+  <script src="huh.js" defer></script>
+<!--    <script src="huh.js"></script>-->
+    <div id = "container">
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
+    </div>
+    
+  
+  </body>
+  
+  </html
